thirdai_platform/model_bazaar/orchestrator/kubernetes/jobs/on_prem_llm_generation/on_prem_llm_generation_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: on-prem-generation
  labels:
    app: on-prem-generation
spec:
  selector:
    app: on-prem-generation
  ports:
    - name: http
      port: 80
      targetPort: 80
