thirdai_platform/model_bazaar/orchestrator/kubernetes/jobs/on_prem_llm_generation/on_prem_llm_generation_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: on-prem-generation
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: thirdai-platform-tls
  rules:
    - http:
        paths:
          - path: /on-prem-llm/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: on-prem-generation
                port:
                  number: 80
